--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="profile-body"><!-- profile body section -->
                 <div class="profile-actions">
                     <button type="button" class="follow" id="follow" onclick="followed()">Follow</button>
-                    <button class="message">Message</button>
+                    <a href="message.html"><button class="message" >Message</button></a>
                     <section class="bio">
                         <div class="bio-header">
                             <i class="fa fa-info-circle"></i>
